Closed Bug 1741759 Opened 2 years ago Closed 2 years ago

CONTENT_PROCESS_MAX (and PRECISE) mistakenly use a histogram instead of a scalar

Categories

(Core :: DOM: Content Processes, defect, P2)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

Details

Attachments

(1 file)

CONTENT_PROCESS_MAX (and the PRECISE variant) use a Histogram instead of a Scalar. This means that if you have 20 content processes, you'll get telemetry values of 3, 4, 5, 6, 7, etc up to 20 - each time we call Telemetry::Accumulate() we add another entry to the outgoing telemetry. Scalars will just send the final value given to ::ScalarSet().

This means the current telemetry is hard-to-impossible to use. It is possible to untangle the data from what we store in sql, but not from the current dashboards.

We should replace it with a new Scalar value.

Severity: -- → S3
Priority: -- → P2

We want to record one max value per (sub)session

Pushed by rjesup@wgate.com:
https://hg.mozilla.org/integration/autoland/rev/58c1a5993ec4
Make CONTENT_PROCESS_MAX/etc scalars instead of histograms r=chutten
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
See Also: → 1745272
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: