Bug 1741759 - Make CONTENT_PROCESS_MAX/etc scalars instead of histograms r=chutten

We want to record one max value per (sub)session

Differential Revision: https://phabricator.services.mozilla.com/D131562