dom/ipc/ContentParent.cpp
@@ -7604,8 +7604,8 @@ void ContentParent::DidLaunchSubprocess() {
   if (count > sMaxContentProcesses) {
     sMaxContentProcesses = count;
 
-    Telemetry::Accumulate(Telemetry::CONTENT_PROCESS_MAX, count);
-    Telemetry::Accumulate(Telemetry::CONTENT_PROCESS_PRECISE_MAX, count);
+    Telemetry::ScalarSet(Telemetry::ScalarID::CONTENT_PROCESS_MAX_PRECISE,
+                         count);
   }
 
   if (sLastContentProcessLaunch) {
